@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form>
+    <label name="product"/>
+    <field name="product"/>
+    <label name="sequence"/>
+    <field name="sequence"/>
+    <label name="type"/>
+    <field name="type"/>
+    <label name="code"/>
+    <field name="code"/>
+</form>
